--- a/Stack.ipynb
+++ b/Stack.ipynb
@@ -6,7 +6,7 @@
       "name": "Stack.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOFE48gwcyY5LFsJ7AHbh6L",
+      "authorship_tag": "ABX9TyMlvZMXaCml45iTL4BW8alC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,35 @@
       },
       "source": [
         "Find K largest elements in an array"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PvKsiJ2orqj-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cf6ee4c4-9ddd-4a35-eec6-23c48a688a99"
+      },
+      "source": [
+        "# naive sorting\n",
+        "def maxK(arr, k):\n",
+        "  return sorted(arr)[:k]\n",
+        "\n",
+        "print(maxK([2,4,2,1], 2))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
